<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notification">
            
		<ListPreference
				android:key="NotificationUri"
				android:title="@string/notification_sound"
				android:summary="@string/notification_sound_desc"
				/>
		<Preference
                android:title="@string/play_sound"
                android:summary="@string/play_sound_desc"
                android:key="playSound" />				
        <CheckBoxPreference
                android:key="Vibrate"
                android:title="@string/notification_vibrate"
                android:summary="@string/notification_vibrate_desc"
                android:defaultValue="True" />
        
        <CheckBoxPreference
                android:key="LED"
                android:title="@string/led_Notification"
                android:summary="@string/led_Notification_desc" 
                android:defaultValue="True" />

        <CheckBoxPreference
                android:key="AutoClear"
                android:title="@string/auto_clear"
                android:summary="@string/auto_clear_desc"
                android:defaultValue="False" />
        		
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/visual">
    
	    <ListPreference
			android:title="@string/color_theme"
			android:summary="@string/color_theme_desc"
			android:key="Theme"
			android:entries="@array/themes"
			android:defaultValue="3"
			android:entryValues="@array/themeValues" />
        <CheckBoxPreference
                android:key="FULLSCREEN"
                android:title="@string/fullscreen"
                android:summary="@string/fullscreen_desc" 
                android:defaultValue="False" />			
    </PreferenceCategory>
    
    
    <PreferenceCategory android:title="@string/misc">
             <CheckBoxPreference
                android:key="NagSilent"
                android:title="@string/nag_dialog"
                android:summary="@string/nag_dialog_desc" 
                android:defaultValue="True" />
             <CheckBoxPreference
                android:key="WakeLock"
                android:title="@string/stay_awake"
                android:summary="@string/stay_awake_desc" 
                android:defaultValue="False" />
		<Preference
                android:title="@string/about"
                android:summary="@string/about_desc"
                android:key="aboutPref" />	
	</PreferenceCategory>
    
 
                    
</PreferenceScreen>
