<?xml version="1.0" encoding="utf-8"?>
<!--
**
** Copyright 2007, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/ScrollView01" 
	android:layout_width="match_parent" 
	android:layout_height="match_parent"
	android:scrollbars="vertical">
	<LinearLayout
        android:id="@+id/container"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        >
		<LinearLayout
	        android:id="@+id/hour_cont"
	        android:gravity="center"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		    <TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/H"
				android:padding="10dp"
				android:textSize="17sp"
			/>
			<Gallery 
				android:layout_width="match_parent" 
				android:id="@+id/gallery_hour" 
				android:spacing="6dp" 
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<LinearLayout
	        android:id="@+id/min_cont"
	        android:gravity="center"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
		
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/M"
				android:textSize="17sp"
				android:padding="10dp"
			/>
			<Gallery 
				android:layout_width="match_parent" 
				android:id="@+id/gallery_min" 
				android:spacing="6dp" 
				android:textColor="@color/gallery_item_color" 
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<LinearLayout
	        android:id="@+id/sec_cont"
	        android:gravity="center"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        >
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:textColor="@color/gallery_item_color" 
				android:text="@string/S"
				android:textSize="17sp"
				android:padding="10dp"
			/>
			<Gallery 
				android:layout_width="match_parent" 
				android:id="@+id/gallery_sec" 
				android:textColor="@color/gallery_item_color" 
				android:spacing="6dp" 
				android:layout_height="wrap_content"/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
